--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,48 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!--CSS,chart.jsの読み込み-->
+<script src="doughnut.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+<link rel="stylesheet" href="index.css">
+<!--読み込むデータ(新型)-->
+<div id="doughnut">
+    <!--上側の部分-->
+    <div id="doughnut_top">
+        <div id="progress">
+            <canvas id="progress_doughnut" width="350" height="175"></canvas>
+               <div class="text_center">
+                <p>進捗率<br>100%</p>
+               </div>
+        </div>
+    </div>
+    <!--右側の部分-->
+    <div id="doughnut_right">
+        <div id="time">
+            <canvas id="time_doughnut" width="280" height="140"></canvas>
+               <div class="text_center">
+                <p>動画時間<br>4時55分/6時間0分</p>
+               </div>
+        </div>
+    </div>
+    <div>
+
+    </div>
+    <!--下側の部分-->    
+    <div id="doughnut_bottom">
+        <div id="n_movie">
+            <canvas id="n_movie_doughnut" class="doughnut_center_bottom" width="140" height="70"></canvas>
+               <div class="text_center">
+                <p>Nプラス<br>1/10</p>
+               </div>
+        </div>
+        <div id="movie">
+            <canvas id="movie_doughnut" class="doughnut_center_bottom" width="140" height="70"></canvas>
+               <div class="text_center">
+                <p>動画<br>1/10</p>
+               </div>
+    </div>
+</div>
+<!--埋め込むデータ-->
+<div id="n_document">
+    <canvas id="n_document_doughnut" class="doughnut_center" width="140" height="70"></canvas>
+       <div class="text_center">
+        <p>資料<br>1/10</p>
+       </div>
